--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AfdtechDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=afdtech-db;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "AfdtechDB": "Data Source=RITA;Initial Catalog=afdtech-project;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
